# godot-lua-test

./: .gitignore
game/: project.godot  test.lua
game/scenes/: test.tscn
game/scripts/: cutscene.gdns
src/: CMakeLists.txt  cutscene.cpp  cutscene.h  gdnative_library.cpp  run.sh
